# skye-lang

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: fibonacci.skye  helloworld.skye
lib/: build.skye  core.skye  os.skye  primitives.skye  std.skye
lib/core/: builtins.skye  core.skye  internals.h  io_primitives.skye  panic.skye
lib/std/: collections.skye  fmt.skye  math.skye  os.skye  random.skye
src/: ast.rs  codegen.rs  environment.rs  lib.rs  main.rs  parser.rs  scanner.rs  skye_type.rs  tokens.rs  utils.rs
