[package]
name = "skye"
version = "2024.10.19"
edition = "2021"
description = "Skye ~ The retrofuturistic programming language"

[dependencies]
colored = "2.1.0"
clap = { version = "4.5.13", features = ["derive"] }
convert_case = "0.6.0"
zip = "2.2.0"
scopeguard = "1.2.0"
serde_json = "1.0.127"
reblessive = "0.4.0"
